hotrod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hotrod
  namespace: monitoring  # <- added this line
spec:
  replicas: 1
  selector:
    matchLabels:
      app: hotrod
  template:
    metadata:
      labels:
        app: hotrod
    spec:
     containers:
       - args:
           - all
         image: jaegertracing/example-hotrod:1.41.0
         name: hotrod
         ports:
           - containerPort: 8080
     restartPolicy: Always
---
apiVersion: v1
kind: Service
metadata:
  name: hotrod
  namespace: monitoring  # <- added this line
spec:
  selector:
    app: hotrod
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
